tests/type/errors/bad-use-conflict.typedsol
3:1 error: Conflicting declarations